fix conflict z-index

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -6,6 +6,10 @@ body {
   font-family: var(--font-montserrat), Arial, Helvetica, sans-serif;
 }
 
+#bwc-widget-action {
+  z-index: 9998 !important;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
